<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ValveOutput" Id="{cb7b5c3e-defe-4b95-bc58-ff824fa932ff}">
    <Declaration><![CDATA[TYPE ST_ValveOutput :
STRUCT
	bEnable AT %Q* : BOOL := 0;
	nValveOutput AT %Q* : INT := 19660;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>